crates/review-buddy/tests/snapshots/cli_gitlab_demo__gitlab_mr_checks.snap
---
source: crates/review-buddy/tests/cli_gitlab_demo.rs
expression: text
---
pass	build	
fail	unit tests	
pass	lint	
--- stderr ---
1 check failed.
