crates/review-buddy/tests/snapshots/cli_gitlab_demo__gitlab_mr_diff_stat.snap
---
source: crates/review-buddy/tests/cli_gitlab_demo.rs
expression: text
---
 src/status/cache.rs |  10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
