crates/review-buddy/tests/snapshots/cli_gitlab_demo__gitlab_queue.snap
---
source: crates/review-buddy/tests/cli_gitlab_demo.rs
expression: text
---
look	platform	platform/flow!1182	fail	priya	2026-10-05T03:00:00Z	Cache pipeline status lookups
